force-app/main/default/objects/Shop_Message_Board__c/Shop_Message_Board__c.object-meta.xml
<CustomObject>
    <label>留言板</label>
    <nameField>
        <label>主题</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>留言板</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>