force-app/main/default/objects/Shop_Message_Board__c/fields/Account_Text__c.field-meta.xml
<CustomField>
    <fullName>Account_Text__c</fullName>
    <label>客户名</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>