force-app/main/default/objects/Shop_Message_Board__c/fields/CurrentUserReadPermission__c.field-meta.xml
<CustomField>
    <fullName>CurrentUserReadPermission__c</fullName>
    <formula>$User.Id == CreatedBy.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>*当前用户是否为留言板创建人</label>
    <type>Checkbox</type>
</CustomField>