force-app/main/default/objects/Shop_Message_Board__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>部门</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>第1営業G</fullName>
            </value>
            <value>
                <fullName>マーケティング部</fullName>
            </value>
            <value>
                <fullName>部品管理G</fullName>
            </value>
            <value>
                <fullName>関西サービスセンター</fullName>
            </value>
            <value>
                <fullName>関西出張修理SC</fullName>
            </value>
            <value>
                <fullName>関西整備G</fullName>
            </value>
            <value>
                <fullName>関西在庫管理G</fullName>
            </value>
            <value>
                <fullName>関東サービスセンター</fullName>
            </value>
            <value>
                <fullName>技術サポートG</fullName>
            </value>
            <value>
                <fullName>関東出張修理SC</fullName>
            </value>
            <value>
                <fullName>関東整備G</fullName>
            </value>
            <value>
                <fullName>関東在庫管理G</fullName>
            </value>
            <value>
                <fullName>販売促進部</fullName>
            </value>
            <value>
                <fullName>商品発売部</fullName>
            </value>
            <value>
                <fullName>物流受注部</fullName>
            </value>
            <value>
                <fullName>販売企画部</fullName>
            </value>
            <value>
                <fullName>人事総務部</fullName>
            </value>
            <value>
                <fullName>財務経営管理部</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>