force-app/main/default/objects/Shop_Message_Board__c/fields/Exprot__c.field-meta.xml
<CustomField>
    <fullName>Exprot__c</fullName>
    <externalId>true</externalId>
    <label>Exprot</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>