force-app/main/default/objects/Shop_Message_Board__c/fields/Field1__c.field-meta.xml
<CustomField>
    <fullName>Field1__c</fullName>
    <label>目标人</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>经理</fullName>
            </value>
            <value>
                <fullName>指定用户</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>