force-app/main/default/objects/Shop_Message_Board__c/fields/Is_Send_Email__c.field-meta.xml
<CustomField>
    <fullName>Is_Send_Email__c</fullName>
    <formula>$CustomMetadata.Email_Switch__mdt.IsActive.IsActive__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>*是否发送邮件</label>
    <type>Checkbox</type>
</CustomField>