force-app/main/default/objects/Shop_Message_Board__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>(&quot;有效&quot;)</defaultValue>
    <label>是否有效</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>有效</fullName>
            </value>
            <value>
                <fullName>过期</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>