force-app/main/default/objects/Shop_Message_Board__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <label>留言</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>