force-app/main/default/objects/Shop_Message_Board__c/fields/priority__c.field-meta.xml
<CustomField>
    <fullName>priority__c</fullName>
    <label>分类</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>大至急（全部）</fullName>
            </value>
            <value>
                <fullName>大至急</fullName>
            </value>
            <value>
                <fullName>A(☆☆☆)</fullName>
                <label>商品納品情報</label>
            </value>
            <value>
                <fullName>B(☆☆)</fullName>
                <label>カタログ＆POP納品情報</label>
            </value>
            <value>
                <fullName>C(☆)</fullName>
                <label>新商品発売情報</label>
            </value>
            <value>
                <fullName>キャンペンーン情報</fullName>
            </value>
            <value>
                <fullName>定番状況</fullName>
            </value>
            <value>
                <fullName>展示情報</fullName>
            </value>
            <value>
                <fullName>物流情報</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>