force-app/main/default/objects/Shop_Message_Board__c/listViews/ALL.listView-meta.xml
<ListView>
    <fullName>ALL</fullName>
    <columns>priority__c</columns>
    <columns>NAME</columns>
    <columns>Account_Text__c</columns>
    <columns>Department__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Exprot__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべての伝言</label>
</ListView>