force-app/main/default/objects/Shop_Message_Board__c/listViews/Messages_Created_By_Myself.listView-meta.xml
<ListView>
    <fullName>Messages_Created_By_Myself</fullName>
    <columns>priority__c</columns>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Account_Text__c</columns>
    <columns>Department__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>Messages Created By Myself</label>
</ListView>