force-app/main/default/objects/Shop_Message_Board__c/listViews/qb1.listView-meta.xml
<ListView>
    <fullName>qb1</fullName>
    <columns>priority__c</columns>
    <columns>NAME</columns>
    <columns>Message__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>priority__c</field>
        <operation>equals</operation>
        <value>キャンペンーン情報</value>
    </filters>
    <filters>
        <field>IsActive__c</field>
        <operation>equals</operation>
        <value>有效</value>
    </filters>
    <label>キャンペンーン情報</label>
</ListView>