force-app/main/default/objects/Shop_Message_Board__c/listViews/wt.listView-meta.xml
<ListView>
    <fullName>wt</fullName>
    <columns>priority__c</columns>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Account_Text__c</columns>
    <columns>Department__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsActive__c</field>
        <operation>equals</operation>
        <value>有效</value>
    </filters>
    <filters>
        <field>priority__c</field>
        <operation>equals</operation>
        <value>その他</value>
    </filters>
    <label>その他</label>
</ListView>